--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         background-image: url("https://images.unsplash.com/photo-1581351721010-8cf859cb14a4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2340&q=80");
         background-size: cover;
         background-position: center;
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         position: relative;
+        padding: 2rem 1rem;
       }
 
       .hero::before {
@@ -44,26 +45,26 @@
       .hero-content {
         text-align: center;
         z-index: 1;
-        padding: 2rem;
         max-width: 800px;
+        width: 100%;
       }
 
       h1 {
         font-family: "Playfair Display", serif;
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         margin-bottom: 1rem;
         color: #ffd700;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
       }
 
       p {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         margin-bottom: 2rem;
       }
 
       .cta-button {
         display: inline-block;
-        padding: 1rem 2rem;
+        padding: 0.8rem 1.5rem;
         background-color: #ff4500;
         color: #fff;
         text-decoration: none;
@@ -88,7 +89,7 @@
         background-color: rgba(255, 255, 255, 0.1);
         padding: 1rem;
         border-radius: 5px;
-        width: calc(33.333% - 1rem);
+        width: calc(50% - 0.5rem);
         min-width: 250px;
         transition: transform 0.3s ease;
       }
@@ -100,15 +101,41 @@
       .event h3 {
         color: #ffd700;
         margin-bottom: 0.5rem;
+        font-size: 1.1rem;
+      }
+
+      .event p {
+        font-size: 0.9rem;
+        margin-bottom: 0;
       }
 
       @media (max-width: 768px) {
+        .hero {
+          padding-top: 3rem;
+          padding-bottom: 3rem;
+        }
+
         h1 {
-          font-size: 2.5rem;
+          font-size: 2rem;
+        }
+
+        p {
+          font-size: 1rem;
         }
 
         .event {
           width: 100%;
+        }
+      }
+
+      @media (max-width: 480px) {
+        h1 {
+          font-size: 1.8rem;
+        }
+
+        .cta-button {
+          padding: 0.7rem 1.2rem;
+          font-size: 0.9rem;
         }
       }
     </style>
